date changed in DDver1_2.pdf

--- a/ITPD/ITPDver1.tex
+++ b/ITPD/ITPDver1.tex
@@ -66,6 +66,9 @@ Here, these will be provided:
 \section{Integration Strategy}
 
 
+In order to begin integration testing textbf{Requirements  
+
+
 
 
 
